--- a/ernesgarcia06/pasatiemposver2/pagina4.html
+++ b/ernesgarcia06/pasatiemposver2/pagina4.html
@@ -53,7 +53,7 @@
     <nav>
         <div class="imagenes">
             <img src="img/newera.jpg" alt="Tienda New Era">
-            <p>Si gustas comprar algo de gorras te recomiendo ir a <cite><a href="https://www.newera.mx/">NEW ERA</a></cite></p>
+            <p>Si gustas comprar algo de gorras te recomiendo ir a <cite><a href="https://www.newera.mx/" target="_blank">NEW ERA</a></cite></p>
         </div>
     </nav>
     <aside></aside>
