--- a/ernesgarcia06/pasatiemposver2/pagina5.html
+++ b/ernesgarcia06/pasatiemposver2/pagina5.html
@@ -48,13 +48,13 @@
         <p>Si gustas acompañarme, puedes dejar aqui tus datos para contactarte.</p>
         <form action="">
             <label for="nombre">Nombre:</label>
-            <input placeholder="Ingrese su nombre aqui" type="text" name="nombre" id="nombre">
+            <input placeholder="Ingrese su nombre aqui" type="text" name="nombre" id="nombre"><br>
 
             <label for="edad">Edad:</label>
-            <input type="number" name="edad" id="edad">
+            <input type="number" name="edad" id="edad"><br>
 
             <label for="telefono">Teléfono: </label>
-            <input type="tel" name="telefono" id="telefono">
+            <input type="tel" name="telefono" id="telefono"><br>
 
             <label for="estadio">¿Estadio al que quisieras ir?: </label>
             <select name="estadio" id="estadio">
