Pintura en óleo, página 3

--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -36,11 +36,10 @@
                         Aunque actualmente son de las bandas de pop con más baladas románticas y de desamor y han llegado a presentarse en muchos países.</p>
                 </section>
                 <h3 style="margin-left: 10px; margin-right: 960px; bottom: 850px;" class="section">Contenido adicional</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/4cwC98WoghgoKzMw" title="Youtube video" frameborder="0"></iframe>
+                <iframe width="560" height="315" style="bottom: 860px; position: relative;" src="https://www.youtube.com/embed/4cwC98WoghgoKzMw" title="Youtube video" frameborder="0"></iframe>
                 <aside>
                     <a href="https://open.spotify.com/playlist/42MoOwzPduAMa3QCqBhKgk?si=aipuISCiSFyM9H4J8f_2ZA" target="_blank"
-                    style= "margin-left: 10px; margin-right: 960px; bottom: 850px;">
-                    Setlist, Los estadios Tour 2024.</a>
+                     style= "margin-left: 10px; margin-right: 960px; bottom: 850px; position: relative;">Setlist, Los estadios Tour 2024.</a>
                 </aside>
                 
             </article>
