--- a/chrischupapi/index.html
+++ b/chrischupapi/index.html
@@ -46,6 +46,22 @@
 
         <p>20 al 22 de agosto</p>
     </article>
+    <article>
+        <header>
+            <h2>Práctica 3</h2>
+        </header>
+        <p>Página index con subpaginas de pasatiempos</p>
+        <h2>LINKS</h2>
+
+        <ul class="a">
+            <li><a href="pasatiemposVer2/indexv2.html">Index pasatiempos</a></li>
+            <li><a href="">Commits de la práctica</a></li>
+        </ul>
+
+        <h2> Fechas de elaboración de la práctica</h2>
+
+        <p>27 al 29 de agosto</p>
+    </article>
 
     <footer class="pie">
         <p>© 2025 - CHRISTIAN LEONARDO LOZANO RAMOS</p>
