--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li id="a10"><a href="#">ESCALANTE COLUNGA JAFET EDUARDO </a></li>
                 <li id="a11"><a href="#FerminEstrada52/index.html">fer-ecs </a></li>
                 <li id="a12"><a href="#">GASPAR IBARRA BERNARDO </a></li>
-                <li id="a13"><a href="#">GOMEZ GARCIA FERNANDA NOHEMI </a></li>
+                <li id="a13"><a href="FernandaGomezG/index.html">FernandaNohemiGomezGarcia</a></li>
                 <li id="a14"><a href="#">GONZALEZ INFANTE ALAN JAIR </a></li>
                 <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>
                 <li id="a16"><a href="ernesgarcia06/index.html">ernesgarcia06 </a></li>
