--- a/RickyCorCam/pasatiempos2/pasatiempo2.html
+++ b/RickyCorCam/pasatiempos2/pasatiempo2.html
@@ -26,7 +26,7 @@
             <hr>
             <table id="tipos">
                 <tr>
-                    <th>TIPOS DE GUITARRA</th>
+                    <th colspan="3">TIPOS DE GUITARRA</th>
                 </tr>
                 <tr>
                     <th>TIPO</th>
@@ -57,7 +57,7 @@
         </section>
         <section>
             <h1 id="estancamiento">El estancamiento</h1>
-            <p>Normalmente la guitarra suele ser un poco frustante al principio por lo dificil que es controlar tus movimientos, <br>
+            <p>Normalmente la <strong>guitarra</strong> suele ser un poco frustante al principio por lo dificil que es controlar tus movimientos, <br>
                 pero si le dedicas aunque sea un poco de tiempo diario puedes notar mejoria al poco tiempo. <br>
                 Lo mejor en este tipo de hobbys es ir guardando tus avances en video para que te des cuenta de lo tanto que has mejorrado, <br>
                 y esto te ayuda a no sentirte mal.
@@ -65,7 +65,9 @@
         </section>
     </main>
     <aside>
-            
+        <h2>Dato curioso</h2>
+        <p>La guitarra eléctrica más cara vendida en la historia fue una <strong>Fender Stratocaster</strong>, 
+        subastada en 2005 por 2.7 millones de dólares. El dinero fue destinado a causas benéficas.</p>
     </aside>
     <footer>
         <hr>
