--- a/RickyCorCam/pasatiempos2/pasatiempo3.html
+++ b/RickyCorCam/pasatiempos2/pasatiempo3.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasatiempo3</title>
+    <title>Anime</title>
 </head>
 <body>
-    
+    <header>
+        <h1>ANIME</h1>
+    </header>
+    <nav>
+        <hr>
+        <a href=""></a> <a href=""></a>
+    </nav>
+    <main>
+        <hr>
+        <p>El anime es un estilo de animación originario de Japón, que se caracteriza por tener una estética visual particular, <br>
+            como ojos grandes y expresivos, y una gran diversidad de géneros y temáticas, que abarca desde fantasía y ciencia ficción hasta romances y dramas, <br>
+            dirigidos a públicos de todas las edades. A menudo, el anime se basa en el manga (cómics japoneses) y se ha convertido en una industria cultural global de gran influencia. </p>
+            <img src="img/anime.jpg" alt="ANIME" width="350">
+            <section>
+                
+            </section>
+    </main>
+    <aside>
+
+    </aside>
+    <footer>
+        <hr>
+        <p>Ricardo Cortes Camarillo #2002049</p>
+        <p>ricardo.corcam@gmail.com</p>
+    </footer>
 </body>
 </html>
