--- a/RickyCorCam/pasatiempos2/pasatiempo1.html
+++ b/RickyCorCam/pasatiempos2/pasatiempo1.html
@@ -11,7 +11,7 @@
         <h1>Videojuegos</h1>
         <hr>
     </header>
-    <nav><a href="#categorias">CATEGORIAS</a>   <a href="#dato">DATO CURIOSO</a></nav>
+    <nav><a href="#categorias">CATEGORIAS</a>   <a href="#dato">DATO CURIOSO</a></nav> <a href="#contacto">CONTACTO</a>
     <hr>
      <main>
         <p>Los <strong>videojuegos</strong> son básicamente una forma de entretenimiento digital donde podemos interactuar con una historia o un reto a través de una consola, <br>
@@ -60,6 +60,7 @@
     </aside>
      <footer>
         <hr>
+        <h1 id="contacto">DATOS DE CONTACTO</h1>
         <p>Ricardo Cortes Camarillo</p>
         <p>ricardo.corcam@gmail.com</p>
      </footer>
