--- a/RickyCorCam/pasatiempos2/pasatiempo2.html
+++ b/RickyCorCam/pasatiempos2/pasatiempo2.html
@@ -11,7 +11,7 @@
         <h1>GUITARRA</h1>
     </header>
     <nav>
-        <a href="#tipos">TIPOS DE GUITARRA</a> <a href="#estancamiento">ESTANCAMIENTO</a>
+        <a href="#tipos">TIPOS DE GUITARRA</a> <a href="#estancamiento">ESTANCAMIENTO</a> <a href="#contacto">CONTACTO</a>
     </nav>
     <main>
         <hr>
@@ -71,6 +71,7 @@
     </aside>
     <footer>
         <hr>
+        <h1 id="contacto">DATOS DE CONTACTO</h1>
         <p>Ricardo Cortes Camarillo #2002049</p>
         <p>ricardo.corcam@gmail.com</p>
     </footer>
