--- a/RickyCorCam/pasatiempos2/pasatiempo3.html
+++ b/RickyCorCam/pasatiempos2/pasatiempo3.html
@@ -11,7 +11,7 @@
     </header>
     <nav>
         <hr>
-        <a href=""></a> <a href=""></a>
+        <a href="#top5">MI TOP 5</a> <a href="#experiencia">MI EXPERIENCIA</a> <a href="#contacto">CONTACTO</a>
     </nav>
     <main>
         <hr>
@@ -20,14 +20,54 @@
             dirigidos a públicos de todas las edades. A menudo, el anime se basa en el manga (cómics japoneses) y se ha convertido en una industria cultural global de gran influencia. </p>
             <img src="img/anime.jpg" alt="ANIME" width="350">
             <section>
-                
+                <hr>
+                <h1>Mi top 5 de animes</h1>
+                <table id="top5">
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Categoría</th>
+                    </tr>
+                    <tr>
+                        <td>Steins;Gate</td>
+                        <td>Ciencia ficción / Viajes en el tiempo</td>
+                    </tr>
+                    <tr>
+                        <td>Danmachi</td>
+                        <td>Fantasía / Aventura</td>
+                    </tr>
+                    <tr>
+                        <td>Naruto</td>
+                        <td>Acción / Shonen</td>
+                    </tr>
+                    <tr>
+                        <td>Blue Lock</td>
+                        <td>Deportes / Shonen</td>
+                    </tr>
+                    <tr>
+                        <td>Re:Zero</td>
+                        <td>Fantasía / Isekai</td>
+                    </tr>
+                </table>
+            </section>
+            <section>
+                <hr>
+                <h1 id="experiencia">Mi experiencia</h1>
+                <p>Empece a ver <strong>anime</strong> no hace mucho tiempo pero se volvio uno de mis pasatiempos favoritos, <br>
+                    nunca habia visto series que fueran asiaticas exceptuando por dragon ball, pero un dia me anime a ver naruto y en verdad me gusto.<br>
+                    Desde ahi segui viendo mas generos y diferentes animes con lo que me di cuenta del mundo infinito de <i>entretenimiento</i> que habia, <br>
+                    debido a que hay tantas historias que minimo una te deberia gustar.
+                </p>
             </section>
     </main>
     <aside>
-
+        <hr>
+        <h2>Dato curioso</h2>
+        <p>El manga de <strong>Naruto</strong>, creado por Masashi Kishimoto, cuenta con más de 700 capítulos y 
+        ha vendido más de 250 millones de copias en todo el mundo, convirtiéndose en uno de los mangas más exitosos de la historia.</p>
     </aside>
     <footer>
         <hr>
+        <h1 id="contacto">DATOS DE CONTACTO</h1>
         <p>Ricardo Cortes Camarillo #2002049</p>
         <p>ricardo.corcam@gmail.com</p>
     </footer>
