--- a/ernesgarcia06/pasatiemposver2/pagina5.html
+++ b/ernesgarcia06/pasatiemposver2/pagina5.html
@@ -62,7 +62,7 @@
                 <option value="4">Estadio Universitario</option>
             </select>
 
-            <input type="button" value="Enviar">
+            <button type="submit">Enviar</button>
         </form>
 
     </main>
