--- a/CarlosPortalesM/pasatiemposver2/pagina1.html
+++ b/CarlosPortalesM/pasatiemposver2/pagina1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pasatiempo 1</title>
 </head>
 <body>
     <header>
@@ -11,7 +11,7 @@
         <h2>Coleccionar carros a escala</h2>
     </header>
     <main>
-        <img src="img/herbiediecast.jpg" alt="Carro a escala" height="300" width="500">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lFwNSiK_c0Y?si=v72GPjS_Dx9moF6K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Tengo este pasatiempo desde aproximadamente 3 años, llegando a una colección de cerca de 200 carros a escala, principalmente marcas como Hot Wheels, Johnny Lightning, entre algunas otras, la mayoría comprados en mercados de juguetes como la "Y Griega" 
             o en tiendas comerciales, aparte de mis carros, he conseguido muchas buenas experiencias, he obtenido experiencia en compra y ventas y he conocido a personas con los mismos gustos que yo, mi favorito es un herbie igual al de la imagen pero lo conservo en su blister (empaque).
         </p>
