--- a/FernandaGomezG/practica3/pagina3.html
+++ b/FernandaGomezG/practica3/pagina3.html
@@ -10,36 +10,23 @@
     <header>
         <main>
             <h1 class="titulos" style="text-align: center;">🎶✨ Pintura en Óleo 🎶✨</h1>
-            
             <p style="margin-left: 30px;" class="textostyle">Me gusta pintar desde que estaba en la primaria, pintar en óleo y lienzos</p>
             <img src="img/oleoimg.jpg" alt="pintura en óleo" class="img">
-            <p style="margin-left: 350px; margin-right: 700px; bottom: 340px;"  class="textostyle" >He practicado pintura desde la primaria, pero fue a edades
+            <p style="margin-left: 350px; margin-right: 700px; bottom: 140px;"  class="textostyle" >He practicado pintura desde la primaria, pero fue a edades
                 más maduras en s que empecé a tomarlo como un hobbie y no un juego, me gusta emplear distintas técnicas y expresar ideas.
             </p>
-            <article>
-                <h2 style="margin-left: 800px;bottom: 580px;" class="titulosarticle">Artista</h2>
-                <section>
-                    <h3 style="margin-left: 800px; margin-right: 200px; bottom: 600px;" class="section"> <a href="https://www.instagram.com/morat?igsh=djkyMWpmZnU5OWMw">Morat</a></h3>
-                    <img src="img/moratimg.jpeg" alt="Concierto de Morat" class="img2" style="margin-left: 830px; bottom: 600px;">
-                    <p style="margin-left: 800px; margin-right: 200px; bottom: 590px;" class="textostylearticle"> Morat es una banda de música de género pop, está compuesta por 4 integrantes colombianos:</p>
-                    <ul>
-                        <li style="margin-left: 800px; margin-right: 200px; position: relative; bottom: 600px;"><a href="https://www.instagram.com/jpabloisaza?igsh=em80ZzRobnA5dXQ2">Juan Pablo Isaza- Teclado, guitarra</a></li>
-                        <li style="margin-left: 800px; margin-right: 200px; position: relative; bottom: 600px;"><a href="https://www.instagram.com/jpvillamil7?igsh=MXJpbmFzbXg3b3Vxcg==">Juan Pablo Villamil- Guitarra, banjo </a></li>
-                        <li style="margin-left: 800px; margin-right: 200px; position: relative; bottom: 600px;"><a href="https://www.instagram.com/simonvargasm?igsh=NnYyZHV4NHNvdjFl">Simón Vargas- Bajo</a></li>
-                        <li style="margin-left: 800px; margin-right: 200px; position: relative; bottom: 600px;"><a href="https://www.instagram.com/martinvargas96?igsh=MW9hazVjYm5vY29vMw==">Martín Vargas- Percusión</a></li>
-                    </ul>
-                    <p style="margin-left: 800px; margin-right: 200px; bottom: 590px;" class="textostylearticle">La banda se formó debido a que se conocen desde pequeños, desde que eran estudiantes y tenían como hobbie la música, entonces nació el sueño
-                        de tener una banda de música, así que comenzaron a presentarse con sus canciones o covers en bares locales y con poca audiencia.
-                        Aunque actualmente son de las bandas de pop con más baladas románticas y de desamor y han llegado a presentarse en muchos países.</p>
-                </section>
-                <h3 style="margin-left: 10px; margin-right: 960px; bottom: 850px;" class="section">Contenido adicional</h3>
-                <iframe width="560" height="315" style="bottom: 860px; position: relative;" src="https://www.youtube.com/embed/4cwC98WoghgoKzMw" title="Youtube video" frameborder="0"></iframe>
-                <aside>
-                    <a href="https://open.spotify.com/playlist/42MoOwzPduAMa3QCqBhKgk?si=aipuISCiSFyM9H4J8f_2ZA" target="_blank"
-                     style= "margin-left: 10px; margin-right: 960px; bottom: 850px; position: relative;">Setlist, Los estadios Tour 2024.</a>
-                </aside>
-                
-            </article>
+            <h2 style="margin-left: 800px;bottom: 580px;" class="titulosarticle">Pintura</h2>
+            <img src="img/oleo2.webp" alt="Pintura en oleo" class="img2" style="margin-left: 830px; bottom: 340px;">
+            <p style="margin-left: 10px; margin-right: 800px; bottom: 630px;" class="textostylearticle">La pintura es un arte que considero debería ser muy valorado, ya que es el medio de expresión de indeas
+                y sentimientos de muchas personas, así como también tiene un valor cultural, etc. en las distintas sociedades.
+            </p>
+            <form action="#" method="post" style="margin: 20px; border: 2px solid #ccc; padding: 20px; border-radius: 10px; bottom: 400px; position: relative;">
+                <h3>Dime cuál es tu obra favorita en óleo</h3>
+                <label for="nombre">Tu nombre:</label><br>
+                <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" required><br><br>
+                <label for="platillo">Obra favorito:</label><br>
+                <input type="text" id="obra" name="obra" placeholder="Ej. La noche estrellada"><br><br>
+            </form>
         </main>
     </header>
 </body>
