Correccion a los links en mi index principal

--- a/danielvm216/index.html
+++ b/danielvm216/index.html
@@ -32,8 +32,8 @@
         <h2>Evidencia 3</h2>
         <p>En esta evidencia se creo un archivo sobre mis pasatiempos pero ahora dentro de la organizacion, ademas de utilizando etiquetas y herramientas nuevas.</p>
         <article>
-            <li><a href="github.com/FDW52AD2025/website52/blob/main/danielvm216/pasatiemposv2/index.html">Pagina personal</a></li>
-            <li><a href="danielvm216\pasatiemposv2\index.html">Pagina de la evidencia</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/danielvm216/pasatiemposv2/index.html">Pagina personal</a></li>
+            <li><a href="pasatiemposv2/index.html">Pagina de la evidencia</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits?author=danielvm216&since=2025-08-27&until=2025-08-29">Commits 27/08/2025 al 29/08/2025</a></li>
         </article>
 
