--- a/RickyCorCam/index.html
+++ b/RickyCorCam/index.html
@@ -73,7 +73,7 @@
                 <ul>
                     <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/pasatiempos2/index.html">Link de la pagina pasatiempo version 2</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-27&until=2025-08-27">Link commit trabajo en clase 27 de agosto</a></li>
-                    <li><a href="">Links commits</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-27&until=2025-08-29">Links commits</a></li>
                 </ul>
             </article>
         </section>
