--- a/chrischupapi/pasatiemposVer2/indexv2.html
+++ b/chrischupapi/pasatiemposVer2/indexv2.html
@@ -53,7 +53,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 - Mi mundo de pasatiempos</p>
+            <p>&copy; 2025 - CHRISTIAN LEONARDO LOZANO RAMOS</p>
         </footer>
     </div>
 </body>
