--- a/aaronrdzr/index.html
+++ b/aaronrdzr/index.html
@@ -17,7 +17,10 @@
         <li><a href="https://github.com/aaronrdzr/Practica1EV1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Commits</a></li>
         <li><a href="https://aaronrdzr.github.io/Practica1EV1/" target="_blank">Pagina Publicada</a></li>
       </header>
-
+      <h2>Practica 3</h2>
+      <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=aaronrdzr&since=2025-08-27&until=2025-08-27">Commit clase</a></li>
+      <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=aaronrdzr&since=2025-08-27&until=2025-08-29">Commits</a></li>
+      <li><a href="https://aaronrdzr.github.io/Practica1EV1/">Pagina Web actualizada</a></li>
     </main>
     <aside></aside>
     <footer style="color: blue;">ARR.</footer>
