--- a/CarlosPortalesM/index.html
+++ b/CarlosPortalesM/index.html
@@ -22,7 +22,16 @@
         <p>En esta segunda práctica cree una carpeta personal para mis prácticas dentro del repositorio del grupo 52</p>
         <li>Pagina personal: <a href="https://fdw52ad2025.github.io/website52/CarlosPortalesM/index.html" target="_blank">Link de pagina de practicas</a></li>
         <p>Y el link de mis commits de la fecha del 20 al 22 de agosto</p>
-        <li>Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=CarlosPortalesM&since=2025-08-20&until=2025-08-22" target="_blank">Link de pagina de practicas</a></li>
+        <li>Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=CarlosPortalesM&since=2025-08-20&until=2025-08-22" target="_blank">Link de commits</a></li>
+        
+        <h2>Práctica 3 - Links</h2>
+        <p>En esta tercer práctica cree una segunda versión de mis pasatiempos, complementandolo con videos, audios, tablas, etc.</p>
+        <li>Pagina principal: <a href="https://fdw52ad2025.github.io/website52/CarlosPortalesM/pasatiemposver2/index.html" target="_blank">Link de pagina principal</a></li>
+        <p>Y el link de mi commit en clase del 27 de agosto</p>
+        <li>Commit en clase: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=CarlosPortalesM&since=2025-08-27&until=2025-08-27" target="_blank">Link de commits 27 agosto</a></li>
+        <p>Y el link de mis commits de la fecha del 20 al 22 de agosto</p>
+        <li>Commits del 27 al 29 de agosto: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=CarlosPortalesM&since=2025-08-27&until=2025-08-29" target="_blank">Link de commits del 27 al 29 agosto</a></li>
+
     </main>
     <aside>
 
