--- a/CarlosPortalesM/pasatiemposver2/pagina5.html
+++ b/CarlosPortalesM/pasatiemposver2/pagina5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header><h1>Formulario sobre pasatiempos</h1></header>
@@ -17,7 +18,6 @@
             <option value="">Ver anime</option>
         </select>
     </form>
-    <hr>
     <p>Después de realizar esta encuesta a 46 personas estos fueron los resultados:</p>
     <table border="1px">
         <thead>
@@ -47,7 +47,6 @@
     </table>
     </main>
     <footer>
-        <hr>
         <a href="index.html">Volver a la página principal</a>
     </footer>
 </body>
