--- a/FernandaGomezG/practica3/pagina3.html
+++ b/FernandaGomezG/practica3/pagina3.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis Hobbies</title>
-    <link rel="stylesheet" href="estilos.css">
-</head>
-<body>
-    <header>
-        <main>
-            <h1 class="titulos" style="text-align: center;">🎶✨ Pintura en Óleo 🎶✨</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mis Hobbies</title>
+        <link rel="stylesheet" href="estilos.css">
+    </head>
+    <body>
+        <header>
+            <main>
+                <h1 class="titulos" style="text-align: center;">🎶✨ Pintura en Óleo 🎶✨</h1>
+            </header>
             <p style="margin-left: 30px;" class="textostyle">Me gusta pintar desde que estaba en la primaria, pintar en óleo y lienzos</p>
             <img src="img/oleoimg.jpg" alt="pintura en óleo" class="img">
             <p style="margin-left: 350px; margin-right: 700px; bottom: 140px;"  class="textostyle" >He practicado pintura desde la primaria, pero fue a edades
@@ -28,6 +29,6 @@
                 <input type="text" id="obra" name="obra" placeholder="Ej. La noche estrellada"><br><br>
             </form>
         </main>
-    </header>
 </body>
+<Footer><p style="color: rgb(70, 70, 182);"><strong> Desarrollado por Fernanda Nohemí Gómez García, Grupo 52</strong></p></Footer>
 </html>
