--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -46,4 +46,5 @@
         </main>
     </header>
 </body>
+<footer><p style="color: rgb(70, 70, 182);"><strong> Desarrollado por Fernanda Nohemí Gómez García, Grupo 52</strong></p></footer>
 </html>
