--- a/FernandaGomezG/practica3/pagina2.html
+++ b/FernandaGomezG/practica3/pagina2.html
@@ -10,6 +10,7 @@
     <header>
         <main>
             <h1 class="titulos" style="text-align: center;">🎶✨ Cocina 🎶✨</h1>
+        </header>
             
             <p style="margin-left: 30px;" class="textostyle">Cocinar me gusta mucho</p>
             <img src="img/spaguetti.jpg" alt="Spaguetti Verde" class="img">
@@ -46,7 +47,10 @@
                     style= "margin-left: 10px; margin-right: 960px; bottom: 940px; position: relative;">
                     Video cocinando spaguetti verde</a>
                 </aside>
-                
             </article>
         </main>
-    </header>
+    </body>
+    <footer>
+        <p style="color: rgb(70, 70, 182);"><strong> Desarrollado por Fernanda Nohemí Gómez García, Grupo 52</strong></p>
+    </footer>
+</html>
