--- a/FernandaGomezG/practica3/pagina5.html
+++ b/FernandaGomezG/practica3/pagina5.html
@@ -11,5 +11,7 @@
 <p>Audio musical referenciando a la canción que sé a la perfección en flauta transversal, aunque no es la misma, el ritmo es similar y también es el tipo de 
     música que escucho mientras pinto.
 </p>
+<audio controls src="audio/audio-club-amapiano-319840.mp3" type=" audio/mpeg"></audio>
 </body>
+<footer><p style="color: rgb(70, 70, 182);"><strong> Desarrollado por Fernanda Nohemí Gómez García, Grupo 52</strong></p></footer>
 </html>
