--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -38,7 +38,7 @@
         <ol>
             <li><a href="practica3/index.html">Página sobre mis hobbies (ver2)</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-08-27&until=2025-08-27">Commits clase 27 de agosto 2025</a></li>
-            <li><a href=""></a>Commits realizados del 27 al 29 de agosto</li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-08-27&until=2025-08-29"></a>Commits realizados del 27 al 29 de agosto</li>
         </ol>
     </main>
     <aside></aside>
