insercion de tabla

--- a/chrischupapi/pasatiemposVer2/paginas/pagina3.html
+++ b/chrischupapi/pasatiemposVer2/paginas/pagina3.html
@@ -45,8 +45,39 @@
                         <p>Valoro y juego clásicos que marcaron la historia de los videojuegos</p>
                     </div>
                 </div>
-            </section>
         </main>
+        <div style="text-align: center;">
+            <div class="divtabla">
+                <table class="table">
+                    <tr>
+                        <th>VideoJuego</th>
+                        <th>Tipo de Juego</th>
+                        <th>Calificación</th>
+                    </tr>
+                    <tr>
+                        <td>Warzone</td>
+                        <td>Battle Royale</td>
+                        <td>10/10</td>
+                    </tr>
+                    <tr>
+                        <td>Mario Kart</td>
+                        <td>Carreras</td>
+                        <td>10/10</td>
+                    </tr>
+                    <tr>
+                        <td>ARK Survival</td>
+                        <td>RPG</td>
+                        <td>7/10</td>
+                    </tr>
+                    <tr>
+                        <td>PUBG</td>
+                        <td>Battle Royale</td>
+                        <td>8/10</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        </section>
         <aside class="content-section" style="text-align: center;">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/GRd2tIjqWP4?si=y03w-Jc_XR0cM-yB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
