--- a/FernandaGomezG/practica3/index.html
+++ b/FernandaGomezG/practica3/index.html
@@ -45,6 +45,9 @@
         <tr>
             <td><a href="pagina4.html">Instrumentos</a></td>
             <td>8 años (Primaria)</td>
+            <tr>
+             <td><a href="pagina5.html">agregado</a></td>
+            </tr>
        </table>
        
     <aside></aside>
