Se agrega practica 3

--- a/ivanmane/index.html
+++ b/ivanmane/index.html
@@ -53,10 +53,23 @@
     </header>
     <main>
         <section>
-            <h2>Evidencia 1</h2>
-            <a href="https://github.com/ivanmane/webmane">Mi repositorio</a>
+            <h2>Practica 1</h2>
+            <a href="https://github.com/ivanmane/webmane/blob/main/practica1.html">Repositorio</a>
+            <a href="https://ivanmane.github.io/webmane/practica1.html">Sitio publicado</a>
+            <a href="https://github.com/ivanmane/webmane/commits/main/?since=2025-08-13&until=2025-08-15">Commits</a>
+        </section>
+        </section>
+        <section>
+            <h2>Practica 1</h2>
+            <a href="https://github.com/ivanmane/webmane">Repositorio</a>
             <a href="https://ivanmane.github.io/webmane/pagina2.html">Mis pasatiempos</a>
             <a href="https://github.com/ivanmane/webmane/commits/?since=2025-08-13&until=2025-08-15">Commits</a>
+        </section>
+        <section>
+            <h2>Practica 2<h2>
+            <a href="link">Repositorio</a>
+            <a href="link">Sitio publicado</a>
+            <a href="link">Commits</a>
         </section>
     </main>
 </body>
