--- a/ivanmane/index.html
+++ b/ivanmane/index.html
@@ -67,9 +67,11 @@
         </section>
         <section>
             <h2>Practica 2<h2>
-            <a href="link">Repositorio</a>
-            <a href="link">Sitio publicado</a>
-            <a href="link">Commits</a>
+            <h2>Practica 2<h2>
+            <a href="https://github.com/ivanmane/webmane/blob/main/pagina2v2.html">Repositorio</a>
+            <a href="https://ivanmane.github.io/webmane/pagina2v2.html">Sitio publicado</a>
+            <a href="https://github.com/ivanmane/webmane/commits/main/?since=2025-08-27&until=2025-08-27">Commit clase 27/08</a>
+            <a href="https://github.com/ivanmane/webmane/commits/main/?since=2025-08-27&until=2025-08-31">Commit clase 27/08 al 31/08</a>
         </section>
     </main>
 </body>
