--- a/ErickLTI/pasatiemposv2/index.html
+++ b/ErickLTI/pasatiemposv2/index.html
@@ -19,7 +19,7 @@
     </header>
     <hr>
     <main>
-        <h3>En esta página se encuntran los links que llevan a mis pasatiempos. Cada link fue hecho a base de esfuerzo. Espero mi trabajo sea de tu agrado.</h3>
+        <h3>En esta página se encuentran los links que llevan a mis pasatiempos. Cada link fue hecho a base de esfuerzo. Espero que mi trabajo sea de tu agrado.</h3>
         <video controls width="300" src="https://www.pexels.com/es-es/download/video/7063373/"></video>
     </main>
 
