--- a/ErickLTI/pasatiemposv2/pagina2.html
+++ b/ErickLTI/pasatiemposv2/pagina2.html
@@ -58,7 +58,7 @@
              </table>
 
             <footer>
-                <h4>Bueno, ahí está la tabla que representa mi top 5 de videojugos. <mark>No sigue un rango</mark>, son simplemente los juegos que se me vienen a la mente, si alguien me pide recomendaciones. Sin más, doy cierre a este artículo.</h4>
+                <h4>Bueno, ahí está la tabla que representa mi top 5 de videojugos. <mark>No sigue un rango</mark>, son simplemente los juegos que se me vendrían a la mente, si alguien me pide recomendaciones. Sin más, doy cierre a este artículo.</h4>
             </footer>
         </article>
     </main>
