--- a/ErickLTI/pasatiemposv2/pagina4.html
+++ b/ErickLTI/pasatiemposv2/pagina4.html
@@ -25,7 +25,7 @@
             <img width="275" height="375" src="https://images.pexels.com/photos/4164765/pexels-photo-4164765.jpeg" alt="">
             <h4>Un poco de mi progreso en lo que se ha vuelto una forma de vida para mí. Me considero principiante en esto del gym, pero poco a poco, con esfuerzo y dedicación, vas mutando.</h4>
             <footer>
-                <h5>Como parte de mi tarea, me gustaría poner una pequeña dinámica en mi página. Voy a recrear un formulario básico para incripción en el gym. Dicho formulario estará en la siguiente sección de mi artículo, internamente. Visualmente para el usuario (ustedes mis lectores), la sigueinte sección será la segunda zona con un margen.</h5>
+                <h5>Como parte de mi tarea, me gustaría poner una pequeña dinámica en mi página. Voy a recrear un formulario básico para inscripción en el gym. Dicho formulario estará en la siguiente sección de mi artículo, internamente. Visualmente para el usuario (ustedes mis lectores), la sigueinte sección será la segunda zona con un margen.</h5>
             </footer>
         </article>
 
