--- a/ErickLTI/pasatiemposv2/pagina5.html
+++ b/ErickLTI/pasatiemposv2/pagina5.html
@@ -20,11 +20,11 @@
             </header>
 
             <!-- desarrollo -->
-            <h4>Bien, este es mi úlimo pasatiempo, o por lo menos el último del cual hablaré en una página, por le momento. Ver películas/series es algo que me gusta mucho, puesto que, por ejemplo, si miras una serie, esta poco a poco te irá trapando y cada vez estarás más "entrado" en la misma. Me gusta esa sensación de querer saber más, la intriga.</h4>
+            <h4>Bien, este es mi úlimo pasatiempo, o por lo menos el último del cual hablaré en una página, por el momento. Ver películas/series es algo que me gusta mucho, puesto que, por ejemplo, si miras una serie, esta poco a poco te irá atrapando y cada vez estarás más "entrado" en la misma. Me gusta esa sensación de querer saber más, la intriga.</h4>
             <img width="385" height="370" src="https://images.pexels.com/photos/33129/popcorn-movie-party-entertainment.jpg" alt="">
             <img width="385" height="370" src="https://images.pexels.com/photos/66134/pexels-photo-66134.jpeg" alt="">
             <img width="385" height="370" src="https://images.pexels.com/photos/7991387/pexels-photo-7991387.jpeg" alt="">
-            <h4>Me gustaría mencionar que una de mis películas favortias es "Rango". Un ambiense desértico. Una lagartija mimada con mala suerte. Un pueblo el cual experimenta anomalías respecto al elixir que los mantenía vivos, osea agua.</h4>
+            <h4>Me gustaría mencionar que una de mis películas favoritas es "Rango". Un ambiente desértico. Una lagartija mimada con mala suerte. Un pueblo el cual experimenta anomalías respecto al elixir que los mantenía vivos, osea agua.</h4>
             <footer>
                 <h4>Si llegaste hasta aquí, solamente me queda agreadecerte por haberte tomado el tiempo de leer mis 4 pasatiempos.</h4>
             </footer>
