--- a/ErickLTI/pasatiemposv2/pagina3.html
+++ b/ErickLTI/pasatiemposv2/pagina3.html
@@ -18,9 +18,9 @@
             </header>
 
             <!-- Desarrollo -->
-            <h4>El tema de hardware es algo que verdaderamente me apasiona. De manera geneal, yo veo el hardware como un rompecabezas. Por ejemplo, si tu objetivo es armar una PC, necesitas de componentes específicos para que pueda funcionar, puesto que las características que tenga un componente, directamente puede afecetar la compatiblidad de otro. El ejemplo más claro son los MHz de la RAM, puesto que deben ir a jugo tanto con la mother board como con el porcesador.</h4>
+            <h4>El tema de hardware es algo que verdaderamente me apasiona. De manera general, yo veo el hardware como un rompecabezas. Por ejemplo, si tu objetivo es armar una PC, necesitas de componentes específicos para que pueda funcionar, puesto que las características que tenga un componente, directamente puede afecetar la compatiblidad de otro. El ejemplo más claro son los MHz de la RAM, puesto que deben ir a juego tanto con la mother board como con el porcesador.</h4>
             <video controls width="500" src="https://www.pexels.com/es-es/download/video/3147349/"></video>
-            <h4>Lo que más me gusta del hardware en sí es la constante innovación del mercado, puesto que los 2 grandes de tarjetas gráficas están en una constante batalla para ver quién saca la tarjeta grácia con mejor tecnología, la que más fps de o mejor optimizada esté. En lo personal, soy team <span style="font-size: 17px;" >NVIDIA</span>, pero...¿Qué team eres tú?</h4>
+            <h4>Lo que más me gusta del hardware en sí es la constante innovación del mercado, puesto que los 2 grandes de tarjetas gráficas están en una constante batalla para ver quién saca la tarjeta gráfica con mejor tecnología, la que más fps de o mejor optimizada esté. En lo personal, soy team <span style="font-size: 17px;" >NVIDIA</span>, pero...¿Qué team eres tú?</h4>
             <form action="">
                 <label for="Marca">Selecciona tu marca favorita de tarjetas gráficas</label>
                 <select name="Marca" id="Marca">
