--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li id="a08"><a href="RickyCorCam/index.html">CORTES CAMARILLO RICARDO </a></li>
                 <li id="a09"><a href="jesuscruz125/index.html">jesuscruz125 </a></li>
                 <li id="a10"><a href="#">ESCALANTE COLUNGA JAFET EDUARDO </a></li>
-                <li id="a11"><a href="#FerminEstrada52/index.html">fer-ecs </a></li>
+                <li id="a11"><a href="FerminEstrada52/index.html">fer-ecs </a></li>
                 <li id="a12"><a href="#">GASPAR IBARRA BERNARDO </a></li>
                 <li id="a13"><a href="FernandaGomezG/index.html">FernandaNohemiGomezGarcia</a></li>
                 <li id="a14"><a href="#">GONZALEZ INFANTE ALAN JAIR </a></li>
