--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="KingBootleg/estiloscss/estilos.css">
     <link rel="stylesheet" href="jesuscruz125/incss/estilosin.css">
     <link rel="stylesheet" href="SunnyWiltshire/CSS/styles.css">
+    <link rel="stylesheet" href="AlejandroRmzEsc/assets/css/style2.css">
     <title>Grupo 52</title>
 </head>
 
@@ -46,7 +47,7 @@
                 <li id="a26"><a href="EddMont/index.html">xxalemazz </a></li>
                 <li id="a27"><a href="IlseOjeda/index.html">IlseOjeda</a></li>
                 <li id="a28"><a href="CarlosPortalesM/index.html">CarlosPortalesM </a></li>
-                <li id="a29"><a href="AlejandroRmzEsc/index.html">AlejandroRmzEsc</a></li>
+                <li id="a29"><a href="AlejandroRmzEsc/index.html" target="_blank"> AlejandroRmzEsc </a></li>
                 <li id="a30"><a href="NerickRamirez/index.html">NerickRamirez</a></li>
                 <li id="a31"><a href="Bejesusrey/index.html">Bejesusrey </a></li>
                 <li id="a32"><a href="AscuOnTop/index.html">AscuOnTop </a></li>
