Borde en el index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="jesuscruz125/incss/estilosin.css">
     <link rel="stylesheet" href="SunnyWiltshire/CSS/styles.css">
     <link rel="stylesheet" href="AlejandroRmzEsc/assets/css/style2.css">
+    <link rel="stylesheet" href="aaronrdzr/css/estilos.css">
     <title>Grupo 52</title>
 </head>
 
