agregue el link de mi hoja de estilos al main

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="SunnyWiltshire/CSS/styles.css">
     <link rel="stylesheet" href="AlejandroRmzEsc/assets/css/style2.css">
     <link rel="stylesheet" href="aaronrdzr/css/estilos.css">
+    <link rel="stylesheet" href="gfuelinme/css/estilos.css">
     <title>Grupo 52</title>
     <link rel="stylesheet" href="Marikve7/style.css">
 </head>
