--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="AlejandroRmzEsc/assets/css/style2.css">
     <link rel="stylesheet" href="aaronrdzr/css/estilos.css">
     <link rel="stylesheet" href="Marikve7/style.css">
+    <link rel="stylesheet" href="Bere-ops/CSS/estilos.css">
     <title>Grupo 52</title>
   </head>
   <body>
