--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="AlejandroRmzEsc/assets/css/style2.css">
     <link rel="stylesheet" href="aaronrdzr/css/estilos.css">
     <link rel="stylesheet" href="gfuelinme/css/estilos.css">
+    <link rel="stylesheet" href="F-rn-ndo/estiloCSS/estilo.css">
     <title>Grupo 52</title>
     <link rel="stylesheet" href="Marikve7/style.css">
 </head>
