Actualización del index principal y de los estilos CSS de mi apartado personal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="Marikve7/style.css" />
         <link rel="stylesheet" href="Bejesusrey/EstilosCss/styles.css" />
         <link rel="stylesheet" href="ernesgarcia06/css/estilos.css">
+        <link rel="stylesheet" href="Hugo-0699/CSS/estilos.css">
         <title>Grupo 52</title>
     </head>
     <body>
