--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="Bejesusrey/EstilosCss/styles.css" />
         <link rel="stylesheet" href="ernesgarcia06/css/estilos.css">
         <link rel="stylesheet" href="F-rn-ndo/estiloCSS/estilo.css">
+        <link rel="stylesheet" href="victoriabalderas/CSS/estilos.css">
         <title>Grupo 52</title>
     </head>
     <body>
