--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="ernesgarcia06/css/estilos.css">
         <link rel="stylesheet" href="F-rn-ndo/estiloCSS/estilo.css">
         <link rel="stylesheet" href="victoriabalderas/CSS/estilos.css">
+        <link rel="stylesheet" href="NerickRamirez/estilos2.css">
         <title>Grupo 52</title>
     </head>
     <body>
