agregar estilo a nickname osw

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="F-rn-ndo/estiloCSS/estilo.css">
         <link rel="stylesheet" href="victoriabalderas/CSS/estilos.css">
         <link rel="stylesheet" href="NerickRamirez/estilos2.css">
+        <link rel="stylesheet" href="oswtobias06/css/estilos.css">
         <title>Grupo 52</title>
     </head>
     <body>
