--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="victoriabalderas/CSS/estilos.css">
         <link rel="stylesheet" href="NerickRamirez/estilos2.css">
         <link rel="stylesheet" href="oswtobias06/css/estilos.css">
+        <link rel="stylesheet" href="Hugo-0699/CSS/estilos.css">
         <title>Grupo 52</title>
     </head>
     <body>
