--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="NerickRamirez/estilos2.css">
         <link rel="stylesheet" href="oswtobias06/css/estilos.css">
         <link rel="stylesheet" href="Hugo-0699/CSS/estilos.css">
+        <link rel="stylesheet" href="aLe.php27/estilosindex.css">
         <title>Grupo 52</title>
     </head>
     <body>
