--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <link rel="stylesheet" href="NerickRamirez/estilos2.css">
         <link rel="stylesheet" href="oswtobias06/css/estilos.css">
         <link rel="stylesheet" href="Hugo-0699/CSS/estilos.css">
+        <link rel="stylesheet" href="ErickLTI/boton_index/boton_index.css">
+
         <title>Grupo 52</title>
     </head>
     <body>
