Modificación de pagina de evidencias para agregar la practica 4, además agregado de target

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <a href="gfuelinme/index.html">gfuelinme</a>
                     </li>
                     <li id="a35">
-                        <a href="aLe.php27/index.html">aLe.php27</a>
+                        <a target="_blank" href="aLe.php27/index.html">aLe.php27</a>
                     </li>
                     <li id="a36">
                         <a href="Bere-ops/index.html">Bere-ops </a>
