--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -50,6 +50,17 @@
                 </ul>
             </section>
         </article>
+        <article>
+            <header>
+                <h3>Practica 4 - 01/09/2025 al 03/09/2025</h3>
+            </header>
+            <p>Para la practica 4 solo puse un estilo a mi link en la pagina principal de la organización.</p>
+            <section>
+                <ul>
+                <li><a target="_blank" href="https://github.com/FDW52EJ2025/website52/commits/main/?author=myAle27admin&since=2025-09-01&until=2025-09-03">COMMITS DEL 01/09/2025 al 03/09/2025</a></li>
+                </ul>
+            </section>
+        </article>
     </main>
     <aside></aside>
     <footer></footer>
