--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="oswtobias06/css/estilos.css">
         <link rel="stylesheet" href="Hugo-0699/CSS/estilos.css">
         <link rel="stylesheet" href="ErickLTI/boton_index/boton_index.css">
+        <link rel="stylesheet" href="caroocaast/paginaweb.2/estiloss.css">
         <title>Grupo 52</title>
     </head>
     <body>
