Se agregaron los commits a la practica 4

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -18,13 +18,20 @@
                     <hr>  
                     <h2>Practica 1</h2>
                 </header>
-                <p>Para esta práctica, se creó un documento HTML en el que se elaboró un artículo acerca de mis pasatiempos personales haciendo uso de las etiquetas básicas vistas en la clase.</p>
+                <p>Para esta práctica se creó un documento HTML en el que se elaboró un artículo acerca de mis pasatiempos personales, haciendo uso de las etiquetas básicas vistas en clase: meta, title, header, main, footer, article, section, img y p. Además, se incluyó un archivo CSS para darle diseño a la página. Y se realizó un commit por cada tema desarrollado, para tener un total de cuatro commits.</p>
+                <ul>
+                    <li>El dibujo (1 commit)</li>
+                    <li>Los Video-juegos (1 commit)</li>
+                    <li>La Calistenia (1 commit)</li>
+                    <li>La Escritura (1 commit)</li>
+                </ul>
+                <p>Fecha de los commits: 13 al 15 de Agosto.</p>
                 <nav>
-                    <h4>Enlaces de GitHub</h4>
+                    <h4>Enlaces de GitHub:</h4>
                     <ul>
-                        <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1.git">REPOSITORIO DE GIT HUB</a></li>
+                        <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1.git">REPOSITORIO PERSONAL DE GIT HUB</a></li>
                         <li><a target="_blank" href="https://hugo-0699.github.io/Practica-1/">SITIO PUBLICADO</a></li>
-                        <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15">COMMITS DEL RESPOSITORIO</a></li>
+                        <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15">COMMITS DEL RESPOSITORIO PERSONAL</a></li>
                     </ul>
                 </nav>
             </section>
@@ -33,13 +40,13 @@
                 <header>
                     <h2>Practica 2</h2>
                 </header>
-                <p>Para esta práctica, se creó una carpeta personal en la organización y, dentro de la misma, se agregó un archivo llamado index.html en el que se adjuntarán todas las prácticas.</p>
+                <p>Para esta práctica, se creó una carpeta personal en la organización y, dentro de la misma, se agregó un archivo llamado index.html en el que se adjuntarán todas las evidencias de aprendizaje.</p>
                 <p>Fecha de los commits: 20 al 22 de Agosto.</p>
                 <nav>
-                    <h4>Enlaces de GitHub</h4>
+                    <h4>Enlaces de GitHub:</h4>
                     <ul>
                         <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/index.html">LINK DEL PERFIL PERSONAL</a></li>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-20&until=2025-08-22">COMMITS DEL RESPOSITORIO</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-20&until=2025-08-22">COMMITS DEL RESPOSITORIO DE LA ORGANIZACION</a></li>
                     </ul>
                 </nav>
             </section>
@@ -48,14 +55,29 @@
                 <header>
                     <h2>Practica 3</h2>
                 </header>
-                <p>En esta práctica se modificará la página de los pasatiempos que se desarrolló en mi cuenta personal, con el objetivo de crear una segunda versión de la primera práctica y hacer uso de las etiquetas vistas recientemente en clase, pero esta vez guardada en la organización. Se hará uso de cinco archivos HTML para la información de los pasatiempos.</p>
+                <p>Para esta práctica, se modificará la página de los pasatiempos personales que se desarrolló en mi cuenta personal, con el objetivo de crear una segunda versión de la primera práctica y hacer uso de las etiquetas vistas recientemente en clase, pero esta vez guardada en la organización. Se hará uso de cinco archivos HTML para la información de los pasatiempos.</p>
                 <p>Fecha de los commits: 27 al 29 de Agosto.</p>
                 <nav>
-                    <h4>Enlaces de GitHub</h4>
+                    <h4>Enlaces de GitHub:</h4>
                     <ul>
-                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/pasatiemposmod/index.html">LINK AL PASATIEMPO V2</a></li>
-                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-27">LINK COMMIT DE LA CLASE DEL 27 DE AGOSTO</a></li>
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/pasatiemposmod/index.html">LINK A LA SEGUNDA VERSION DE "MIS PASATIEMPOS"</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-27">LINK DE LOS COMMITS DE LA CLASE DEL 27 DE AGOSTO</a></li>
                         <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-27&until=2025-08-29">LINK DE TODOS LOS COMMITS</a></li>
+                    </ul>
+                    <hr>
+                </nav>
+            </section>
+
+            <section>
+                <header>
+                    <h2>Practica 4</h2>
+                </header>
+                <p>Para esta actividad, se aplicó un estilo personalizado a mi enlace personal de la página principal de la organización.</p>
+                <p>Fecha de los commits:  1 al 3 de Septiembre.</p>
+                <nav>
+                    <h4>Enlaces de GitHub:</h4>
+                    <ul>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-09-01&until=2025-09-02">LINK DE LOS COMMITS</a></li>
                     </ul>
                     <hr>
                 </nav>
