--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <link rel="stylesheet" href="Hugo-0699/CSS/estilos.css">
         <link rel="stylesheet" href="aLe.php27/estilosindex.css">
         <link rel="stylesheet" href="ErickLTI/boton_index/boton_index.css">
+        <link rel="stylesheet" href="AscuOnTop/cssnombre/nombre.css">
         <title>Grupo 52</title>
     </head>
     <body>
