Se agrega diseño al link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="aLe.php27/estilosindex.css">
         <link rel="stylesheet" href="ErickLTI/boton_index/boton_index.css">
         <link rel="stylesheet" href="caroocaast/paginaweb.2/estiloss.css">
+        <link rel="stylesheet" href="MiguelABanda/Estilo.css">
         <title>Grupo 52</title>
     </head>
     <body>
@@ -44,7 +45,7 @@
                             >victoriabalderas
                         </a>
                     </li>
-                    <li id="a04">
+                    <br> <li id="a04">
                         <a href="MiguelABanda/index.html">MiguelABanda </a>
                     </li>
                     <li id="a05">
