modificacion del link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="ErickLTI/boton_index/boton_index.css">
         <link rel="stylesheet" href="caroocaast/paginaweb.2/estiloss.css">
         <link rel="stylesheet" href="MiguelABanda/Estilo.css">
+        <link rel="stylesheet" href="ianstiglitz/styles.css">
         <title>Grupo 52</title>
     </head>
     <body>
