--- a/FerminEstrada52/pasatiemposv2/judo.html
+++ b/FerminEstrada52/pasatiemposv2/judo.html
@@ -32,8 +32,8 @@
                 </header>
                 <p>Formo parte del equipo de judo de <abbr title="Facultad de Ciencias Físico Matemáticas y Arquitectura">FACPYA</abbr> desde <em>4to semestre</em>, lo elegí porque me gustan
                     los deportes de combate y sentía un área de <mark>oportunidad</mark> en mi grappling.</p>
-                <img src="FerminEstrada52\pasatiemposv2\Imagenes\judo.jpg" alt="entrenamiento judo">
-                <p><small>El judo desarrolla disciplina física y mental.</small></p>
+                <img src="Imagenes\judo.jpg" alt="entrenamiento judo">
+                <p><small>El judo me ayuda a desarollar mi base para MMA.</small></p>
             </article>
         </section>
     </main>
