--- a/ianstiglitz/index.html
+++ b/ianstiglitz/index.html
@@ -10,6 +10,7 @@
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
     <main>
+        <ul>
         <h2>Práctica 1: Pasatiempos Treviño</h2>
         <p>Se debe realizar un solo documento html donde se integre información sobre sus pasatiempos. Utilizar las etiquetas: meta, title, header, main,footer, article, section, img y p. Aplicar estilos sencillos como color de texto, fondo y borde. Para los estilos utilizar un archivo externo css. Se necesita que realice 1 commit por cada tema que desarrolle.</p>
         <p>A continuacion se muestra los links acordados: </p>
@@ -18,15 +19,21 @@
             <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o">Página del repositorio</a></li>
             <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o/commits/master">Página de los commits</a></li>
         </ul>
+        </ul>
+        
+        <ul>
         <h2>Practica 2: Carpeta en la organización</h2>
         <p>En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.</p>
-        <ul>
-
         </ul>
+
+        <ul>
         <h2>Practica 3: Rework a Pasatiempos Treviño</h2>
         <p>Modificar la página pasatiempos que desarrollo en su cuenta personal. Está practica consiste en realizar la versión 2 sobre sus pasatiempos, pero esta vez se tiene que guardar en la organización. Se solicita que utilice 5 archivos html para la información de sus pasatiempos. En cada documento html utilice etiquetas de estructura (header,nav, main,aside,footer).</p>
+        </ul>
+
         <ul>
-            
+        <h2>Practica 4: Diseño del enlace</h2>
+        <p>Aplicar estilo personalizado a su link de la página principal de la organización. Los estilos aplicados deben ser almacenados dentro de su carpeta en la organización. Será necesario agregar un link css en la sección head del archivo index (archivo de la organización).</p>
         </ul>
     </main>
     <aside></aside>
