Se actualizó sitio de evidencias

--- a/FerminEstrada52/index.html
+++ b/FerminEstrada52/index.html
@@ -28,5 +28,22 @@
         <h3>Fecha de commits</h3>
             <p>Del 20 al 22 de agosto</p>
     </section>
+    <h2>Práctica 3</h2>
+        <h3>Descripción</h3>
+            <p>Segunda versión de sitio de pasatiempos.</p>
+        <h3>Links</h3>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/FerminEstrada52/pasatiemposv2/judo.html">Sitio</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FerminEstrada52&since=2025-08-27&until=2025-08-29">Commits</a></li>
+        <h3>Fecha de commits</h3>
+            <p>Del 27 al 29 de agosto</p>
+    </section>
+    <h2>Práctica 4</h2>
+        <h3>Descripción</h3>
+            <p>Aplicación de estilo personalizado a link.</p>
+        <h3>Links</h3>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FerminEstrada52&since=2025-09-01&until=2025-09-03">Commits</a></li>
+        <h3>Fecha de commits</h3>
+            <p>Del 1 al 3 de septiembre</p>
+    </section>
 </body>
 </html>
