--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="caroocaast/paginaweb.2/estiloss.css">
         <link rel="stylesheet" href="MiguelABanda/Estilo.css">
         <link rel="stylesheet" href="ianstiglitz/styles.css">
+        <link rel="stylesheet" href="TheRafaMan06/Style_name/style.css">
         <title>Grupo 52</title>
     </head>
     <body>
