--- a/diegoalgosa/paginaprincipal.html
+++ b/diegoalgosa/paginaprincipal.html
@@ -54,6 +54,15 @@
                     </li>
                 </ul>
             </section>
+                        <section>
+                <h3>Practica 4</h3>
+                <p>Realizada el 03 de Septiembre del 2025.</p>
+                <p>Se agrego estilo personalizado a mi link de la pagina principal.</p>
+                <ul>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commit/bd16fe971b94e516b7034786b416fd1fb001dfa5">Enlace commits</a>
+                    </li>
+                </ul>
+            </section>
         </article>
     </main>
     <aside></aside>
