--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                     <li id="a44">
                         <a href="Hugo-0699/index.html">Hugo-0699 </a>
                     </li>
+                    <li id="a45">
+                        <a href="diegoalgosa/paginaprincipal.html">diegoalgosa </a>
+                    </li>
                 </ul>
             </nav>
         </main>
