--- a/RdeReimer/index.html
+++ b/RdeReimer/index.html
@@ -16,7 +16,7 @@
             color: rgb(50, 50, 50);;
         }
         .centrado-text{
-            display: flex;
+            display:flex ;
             justify-content: center;
             text-align: center;
             padding: 10px 10px;
@@ -98,7 +98,8 @@
 
             Se debe realizar un solo documento html donde se integre información sobre sus pasatiempos.
             Utilizar las etiquetas: meta, title, header, main,footer, article, section, img y p. 
-            Aplicar estilos sencillos como color de texto, fondo y borde. Para los estilos utilizar un archivo externo css. Se necesita que realice 1 commit por cada tema que desarrolle.
+            Aplicar estilos sencillos como color de texto, fondo y borde.
+             Para los estilos utilizar un archivo externo css. Se necesita que realice 1 commit por cada tema que desarrolle.
 
             Yo realice un commit por:
 
@@ -157,9 +158,24 @@
             Fecha commits: 27 al 29 de Agosto.
         </pre>
         <ul class="centrado-ul">
-            <li>Link Página pasatiempos versión 2: <a href="https://fdw52ad2025.github.io/website52/RdeReimer/pasaTimepoVer2/pagina1.html"> Link Página pasatiempso versión 2:</a></li>
+            <li>Link Página pasatiempos versión 2: <a href="https://fdw52ad2025.github.io/website52/RdeReimer/pasaTimepoVer2/pagina1.html"> https://fdw52ad2025.github.io/website52/RdeReimer/pasaTimepoVer2/pagina1.html</a></li>
             <li>Link Commits trabajo en clase 27 de agosto: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-27&until=2025-08-27">https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-27&until=2025-08-27</a></li>
             <li>Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-27&until=2025-08-29">https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-27&until=2025-08-29</a> </li>
+        </ul>
+        </section>
+                <section>
+        <header>
+            <h4 class="centrado">Practica 4</h4>
+        </header>
+        <pre class="centrado-text">
+        Aplicar estilo personalizado a su link de la página principal de la organización.
+        Los estilos aplicados deben ser almacenados dentro de su carpeta en la organización.
+         Será necesario agregar un link css en la sección head del archivo index (archivo de la organización).
+
+        Fecha commits: 1 al 3 de Septiembre.
+        </pre>
+        <ul class="centrado-ul">
+            <li>Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-09-01&until=2025-09-03">https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-09-01&until=2025-09-03</a></li>
         </ul>
         </section>
     </main>
